[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "msglc.msglc_rust"

[project]
version = "260319"
name = "msglc"
description = "msgpack with lazy/partial loading containers"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["msgpack", "serialization", "lazy loading"]
authors = [{ name = "Theodore Chang", email = "tlcfem@gmail.com" }]
maintainers = [{ name = "Theodore Chang", email = "tlcfem@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: File Formats :: JSON",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "msgpack>=1",
    "bitarray",
    "universal_pathlib",
]

[project.optional-dependencies]
dev = [
    "mkdocs-awesome-pages-plugin",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "ruff",
]
numpy = [
    "numpy",
]
msgspec = [
    "msgspec",
]
ormsgpack = [
    "ormsgpack",
]
s3fs = [
    "s3fs"
]
pyarrow = [
    "pyarrow"
]
all = [
    "msglc[dev]",
    "numpy",
    "msgspec",
    "ormsgpack",
    "s3fs",
    "pyarrow",
]

[project.urls]
"Homepage" = "https://github.com/TLCFEM/msglc"
"Bug Reports" = "https://github.com/TLCFEM/msglc/issuess"
"Source" = "https://github.com/TLCFEM/msglc"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
